--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
-
+        cache: maven
     - name: Build with Maven
-      run: mvn -Dmaven.tests.skip=true -B package --file pom.xml
+      run: mvn -Dmaven.test.skip=true -B package --file pom.xml
 
-#   - name: Publish to GitHub Packages Apache Maven
-#      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-#      env:
-#       GITHUB_TOKEN: ${{ github.token }}
